--- a/packages/client/src/monkeyball/monkeyball.css
+++ b/packages/client/src/monkeyball/monkeyball.css
@@ -8,12 +8,16 @@
 .shadow {
   width: 100%;
   height: 100%;
+
   background: radial-gradient(
-    50% 50% at 50% 50%,
-    rgba(255, 255, 255, 0.5) 0%,
-    rgba(0, 0, 0, 0.3) 74.02%
+    82.01% 82.01% at 27.16% 24.37%,
+    rgba(217, 217, 217, 0.5) 0%,
+    rgba(162, 162, 162, 0.5) 54.33%,
+    rgba(88, 88, 88, 0.5) 85.58%,
+    rgba(103, 103, 103, 0.5) 100%
   );
-  background-position: -54px -50px;
+  box-shadow: -3px -6px 20px 0 rgba(0, 0, 0, 0.6) inset,
+    1px 1px 30px 0 rgba(230, 230, 230, 0.8) inset;
   top: 0;
   left: 0;
   position: absolute;
