--- a/packages/client/tetris/scene.css
+++ b/packages/client/tetris/scene.css
@@ -65,8 +65,8 @@
 :root {
   --box-width: 6;
 
-  --background-grid-color: black;
-  --background-fill-color: #edf1e6;
+  --background-grid-color: white;
+  --background-fill-color: black;
   --ghost-color: rgba(200, 200, 200, 0.8);
 
   --grid-size: 57px;
@@ -103,7 +103,7 @@ footer {
   width: 100%;
   height: 100%;
 
-  border: var(--grid-border-size) solid black;
+  border: var(--grid-border-size) solid var(--background-grid-color);
   border-left: 0;
   border-top: 0;
   background-image: linear-gradient(
@@ -166,10 +166,10 @@ footer {
 /* all children go directly on top of each other */
 .box > * {
   grid-area: 1/1;
-  background: var(--background-fill-color);
+  background: var(--color);
   opacity: 0.8;
   border-radius: 3%;
-  border: var(--grid-border-size) solid #c9ff;
+  border: var(--grid-border-size) solid var(--background-grid-color);
 }
 
 /* the transform origin for rotate is center by default, so rotations must first */
@@ -194,30 +194,36 @@ footer {
 } /* center, then around X-axis to the bottom */
 
 .shapeI .box * {
-  border-color: cyan;
+  --color: cyan;
 }
 .shapeT .box * {
-  border-color: red;
+  --color: red;
 }
 .shapeO .box * {
-  border-color: blueviolet;
+  --color: blueviolet;
 }
 .shapeS .box * {
-  border-color: yellow;
+  --color: yellow;
 }
 .shapeZ .box * {
-  border-color: lime;
+  --color: lime;
 }
 .shapeL .box * {
-  border-color: orange;
+  --color: orange;
 }
 .shapeF .box * {
-  border-color: white;
+  --color: white;
+}
+
+.box * {
+  background-color: var(--color);
+  box-shadow: 0 0 3cqmin var(--color);
 }
 
 .ghost .box * {
   background-color: transparent;
   border: none;
+  box-shadow: none;
 }
 .ghost .box :nth-child(2) {
   /* floor face */
@@ -227,7 +233,7 @@ footer {
 }
 
 .plane {
-  border: var(--grid-border-size) solid black;
+  border: var(--grid-border-size) solid var(--background-grid-color);
 
   &.show {
     background-image: linear-gradient(
