--- a/src/tetris/tetris.css
+++ b/src/tetris/tetris.css
@@ -289,6 +289,7 @@ footer {
   cursor: grab;
   pointer-events: auto;
   transition: transform 0.18s ease;
+  touch-action: none;
   --joystick-center-offset-x: 0px;
   --joystick-center-offset-y: 0px;
   --joystick-center-scale: 1;
