forcibly remove user select

--- a/src/tetris/scene3D/scene.css
+++ b/src/tetris/scene3D/scene.css
@@ -64,3 +64,8 @@
     -webkit-user-select:    none; /* sadly still needed in 2024 */
     user-select:            none;
 }
+
+* {
+    -webkit-user-select:    none !important; /* sadly still needed in 2024 */
+    user-select:            none !important;
+}
