--- a/src/tetris/tetris.css
+++ b/src/tetris/tetris.css
@@ -4,6 +4,31 @@
     --unit: 1cqmin;
     --box-width: calc(6 * var(--unit));
 
+    --color-cyan-500: #02FFFFFF;
+    --color-cyan-400: #9EFFFFFF;
+    --color-cyan-300: #C2FFFFFF;
+    --color-cyan-200: #E0FFFFFF;
+    --color-purple-500: #8447FFFF;
+    --color-purple-400: #BE9EFFFF;
+    --color-purple-300: #D6C2FFFF;
+    --color-purple-200: #EAE0FFFF;
+    --color-green-500: #AFFF02FF;
+    --color-green-400: #E0FF9EFF;
+    --color-green-300: #ECFFC2FF;
+    --color-green-200: #F5FFE0FF;
+    --color-red-500: #FB0F5AFF;
+    --color-red-400: #FF9EBCFF;
+    --color-red-300: #FFC2D6FF;
+    --color-red-200: #FFE0EAFF;
+    --color-blue-500: #5DA9FFFF;
+    --color-blue-400: #8CC2FFFF;
+    --color-blue-300: #B6D8FFFF;
+    --color-blue-200: #DCECFFFF;
+    --color-pink-500: #FF35D0FF;
+    --color-pink-400: #FF6BDDFF;
+    --color-pink-300: #FFA4EAFF;
+    --color-pink-200: #FFD4F5FF;
+
     --joystick-size: 9em;
     --joystick-border-thickness: 0.75em;
     --joystick-border-radius: 26px;
@@ -609,17 +634,33 @@ footer {
 /* Color rings differently based on axis */
 .axis-ring[data-axis='roll'] .ring-track,
 .axis-ring[data-axis='roll'] .ring-handle {
-    stroke: #00ffff;
+    stroke: var(--color-blue-500);
 }
 
 .axis-ring[data-axis='pitch'] .ring-track,
 .axis-ring[data-axis='pitch'] .ring-handle {
-    stroke: #afff02;
+    stroke: var(--color-cyan-500);
 }
 
 .axis-ring[data-axis='yaw'] .ring-track,
 .axis-ring[data-axis='yaw'] .ring-handle {
-    stroke: #fff;
+  stroke: var(--color-green-500);
+}
+
+/* and on mode */
+.mode-room .axis-ring[data-axis='roll'] .ring-track,
+.mode-room .axis-ring[data-axis='roll'] .ring-handle {
+    stroke: var(--color-purple-500);
+}
+
+.mode-room .axis-ring[data-axis='pitch'] .ring-track,
+.mode-room .axis-ring[data-axis='pitch'] .ring-handle {
+    stroke: var(--color-red-500);
+}
+
+.mode-room .axis-ring[data-axis='yaw'] .ring-track,
+.mode-room .axis-ring[data-axis='yaw'] .ring-handle {
+    stroke: var(--color-pink-500);
 }
 
 /* Responsive adjustments */
