--- a/src/tetris/tetris.css
+++ b/src/tetris/tetris.css
@@ -696,6 +696,7 @@ footer {
 }
 
 .outrun {
+    --outrun-height: 50vh;
     position: fixed;
     bottom: 0;
     left: 0;
@@ -706,14 +707,14 @@ footer {
 .outrun-grid-perspective {
     perspective: 1000px;
     overflow: hidden;
-    height: 300px;
+    height: var(--outrun-height);
     position: relative;
 }
 
 .outrun-grid-perspective::after {
     content: '';
     display: block;
-    height: 300px;
+    height: var(--outrun-height);
     width: 100%;
     box-shadow: inset 0 20px 50px -20px var(--background-darker);
 
@@ -725,7 +726,7 @@ footer {
 
 .outrun-grid-container {
     width: 100%;
-    height: 660px;
+    height: 900px;
     border: 2px solid var(--outrun-grid-color);
     transition: all 0.5s ease-in-out;
     box-sizing: border-box;
@@ -768,11 +769,11 @@ footer {
     --sun-color: lch(from var(--outrun-grid-color) 80 145 h);
     --sun-shadow: lch(from var(--outrun-grid-color) calc(l - 20) 100 h);
     position: absolute;
-    bottom: 300px;
+    bottom: var(--outrun-height);
     left: 50%;
     transform: translateX(-50%);
     width: 400px;
-    height: 200px;
+    height: min(200px, var(--outrun-height));
     background: var(--sun-color);
     border-radius: 400px 400px 0 0;
     opacity: 0.8;
