--- a/src/tetris/tetris.css
+++ b/src/tetris/tetris.css
@@ -687,120 +687,123 @@ footer {
     pointer-events: none;
 }
 
-:root {
-    --hue-rotation: 10;
-    --background-darker: lch(from var(--background) calc(l + 20) c h);
-    --outrun-grid-color: lch(
-        from var(--background) calc(l + 40) c calc(h + var(--hue-rotation))
-    );
-}
-
 .outrun {
-    --outrun-height: 50vh;
+    --height: 50vh;
+    --grid-color: lch(from var(--background) calc(l + 40) c calc(h));
+    --sunset: lch(from var(--background) calc(l + 20) c h);
+    --sun-color: lch(from var(--grid-color) 80 145 h);
+    --sun-shadow: lch(from var(--grid-color) calc(l - 20) 100 h);
     position: fixed;
     bottom: 0;
     left: 0;
     width: 100%;
     z-index: -1;
+
+    .outrun-grid-perspective {
+        perspective: 1000px;
+        overflow: hidden;
+        height: var(--height);
+        position: relative;
+    }
+
+    .outrun-grid-perspective::after {
+        content: '';
+        display: block;
+        height: var(--height);
+        width: 100%;
+        position: absolute;
+        z-index: 3;
+        box-shadow: inset 0 20px 50px -20px var(--sunset);
+        top: 0;
+        transition: all 0.5s ease-in-out;
+    }
+
+    .outrun-grid-container {
+        width: 100%;
+        height: 300%;
+        border: 2px solid var(--grid-color);
+        transition: all 0.5s ease-in-out;
+        box-sizing: border-box;
+        transform-origin: top;
+        transform: rotateX(70deg) translateY(10%);
+        overflow: hidden;
+        position: relative;
+    }
+
+    .vert {
+        display: inline-block;
+        height: 100%;
+        width: 2px;
+        background-color: var(--grid-color);
+        transition: all 0.5s ease-in-out;
+        margin-left: 12%;
+        box-shadow: 0 2px 21px var(--grid-color);
+        margin-left: 4.5%;
+    }
+
+    .hor {
+        width: 100%;
+        height: 3px;
+        background-color: var(--grid-color);
+        box-shadow: 2px 0 21px var(--grid-color);
+        transition: color 0.5s ease-in-out, background-color 0.5s ease-in-out,
+            box-shadow 0.5s ease-in-out;
+        margin-bottom: 4.8%;
+    }
+
+    .moving-lines {
+        position: absolute;
+        top: 0;
+        left: 0;
+        width: 100%;
+        height: 300%;
+        animation: moveLines 2s linear infinite;
+    }
+
+    .outrun-sun {
+        position: absolute;
+        bottom: var(--height);
+        left: 50%;
+        transform: translateX(-50%);
+        width: 400px;
+        height: min(200px, var(--height));
+        background: var(--sun-color);
+        border-radius: 400px 400px 0 0;
+        opacity: 0.8;
+        transition: all 0.5s ease-in-out;
+        box-shadow: 0 0 100px var(--sun-shadow);
+        overflow: hidden;
+
+        .shimmer {
+            position: absolute;
+            background: var(--color-purple-700);
+            width: 100%;
+            opacity: 0.8;
+            transition: all 0.5s ease-in-out;
+        }
+
+        .shimmer:nth-child(1) {
+            bottom: 5%;
+            height: 10%;
+        }
+
+        .shimmer:nth-child(2) {
+            bottom: 25%;
+            height: 5%;
+        }
+
+        .shimmer:nth-child(3) {
+            bottom: 40%;
+            height: 2%;
+        }
+    }
 }
 
-.outrun-grid-perspective {
-    perspective: 1000px;
-    overflow: hidden;
-    height: var(--outrun-height);
-    position: relative;
-}
-
-.outrun-grid-perspective::after {
-    content: '';
-    display: block;
-    height: var(--outrun-height);
-    width: 100%;
-    box-shadow: inset 0 20px 50px -20px var(--background-darker);
-
-    position: absolute;
-    z-index: 3;
-    top: 0;
-    transition: all 0.5s ease-in-out;
-}
-
-.outrun-grid-container {
-    width: 100%;
-    height: 900px;
-    border: 2px solid var(--outrun-grid-color);
-    transition: all 0.5s ease-in-out;
-    box-sizing: border-box;
-    transform-origin: top;
-    transform: rotateX(70deg) translateY(10%);
-    overflow: hidden;
-    position: relative;
-}
-
-.vert {
-    display: inline-block;
-    height: 100%;
-    width: 2px;
-    background-color: var(--outrun-grid-color);
-    transition: all 0.5s ease-in-out;
-    margin-left: 12%;
-    box-shadow: 0 2px 21px var(--outrun-grid-color);
-    margin-left: 4.5%;
-}
-
-.moving-lines {
-    position: absolute;
-    top: 0;
-    left: 0;
-    width: 100%;
-    height: 300%;
-}
-
-.hor {
-    width: 100%;
-    height: 3px;
-    background-color: var(--outrun-grid-color);
-    margin-top: 19%;
-    box-shadow: 2px 0 21px var(--outrun-grid-color);
-    transition: all 0.5s ease-in-out;
-    margin-top: 4.8%;
-}
-
-.outrun-sun {
-    --sun-color: lch(from var(--outrun-grid-color) 80 145 h);
-    --sun-shadow: lch(from var(--outrun-grid-color) calc(l - 20) 100 h);
-    position: absolute;
-    bottom: var(--outrun-height);
-    left: 50%;
-    transform: translateX(-50%);
-    width: 400px;
-    height: min(200px, var(--outrun-height));
-    background: var(--sun-color);
-    border-radius: 400px 400px 0 0;
-    opacity: 0.8;
-    transition: all 0.5s ease-in-out;
-    box-shadow: 0 0 100px var(--sun-shadow);
-    overflow: hidden;
-}
-
-.shimmer {
-    position: absolute;
-    background: var(--color-purple-700);
-    width: 100%;
-    opacity: 0.8;
-    transition: all 0.5s ease-in-out;
-}
-
-.outrun-sun .shimmer:nth-child(1) {
-    bottom: 5%;
-    height: 10%;
-}
-
-.outrun-sun .shimmer:nth-child(2) {
-    bottom: 25%;
-    height: 5%;
-}
-
-.outrun-sun .shimmer:nth-child(3) {
-    bottom: 40%;
-    height: 2%;
+@keyframes moveLines {
+    from {
+        transform: translateY(-86px);
+    }
+    to {
+        transform: translateY(0);
+    }
 }
